# cit310-visible-surface-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Lib/: ogdf_SvgPrinter.cpp
Lib/SFML/lib/msvc-win-x64/: sfml-main-d-srt.lib  sfml-system-s-d-srt.lib
Lib/ogdf/include/ogdf/basic/internal/: config_autogen.h
Lib/ogdf/lib/: README.md
SamplesObject/: BoringHouse.sobj  cube.sobj
Source/: ExampleShape.cpp  ExampleShape.hpp  Macro.hpp  Main.cpp
Source/Component/: PositionComponent.cpp  PositionComponent.hpp  Shape3DComponent.cpp  Shape3DComponent.hpp  SphereComponent.cpp  SphereComponent.hpp  Surface2DComponent.cpp  Surface2DComponent.hpp  Surface3DComponent.cpp  Surface3DComponent.hpp  SurfaceComponent.cpp  SurfaceComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  Triangle2DComponent.cpp  Triangle2DComponent.hpp  Triangle3DComponent.cpp  Triangle3DComponent.hpp
Source/Core/: App.cpp  App.hpp  Camera.cpp  Camera.hpp
Source/Misc/: BinaryTreePartitioning.cpp  BinaryTreePartitioning.hpp  EdgeBucket.cpp  EdgeBucket.hpp
Source/System/: BaseRenderSystem.cpp  BaseRenderSystem.hpp  PainterRenderSystem.cpp  PainterRenderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  ZBufferRenderSystem.cpp  ZBufferRenderSystem.hpp
Source/Tags/: SphereTag.cpp  SphereTag.hpp
Source/Util/: Color.cpp  Color.hpp  Logger.hpp
Source/Util/ModelLoader/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
